src/test/ui/parser/keyword-impl-as-identifier.stderr
error: expected identifier, found keyword `impl`
  --> $DIR/keyword-impl-as-identifier.rs:4:9
   |
LL |     let impl = "foo";
   |         ^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#impl = "foo";
   |         ^^^^^^

error: aborting due to previous error

